--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,9 @@ a.nav-link{
 .get-started{
   position:relative;
   z-index:1;
+  justify-content:center;
+  align-items:center;
+
 }
 .get-started-link{
   margin-left: 25px;
@@ -89,4 +92,13 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+@media only screen and (max-width:769px){
+  form.d-flex.get-started{
+    margin:0 auto;
+
+  } 
+  .get-started-link{
+    margin:0 auto;
+  } 
 }
