--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@
  transform: skew(-45deg);
  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
 }
-.card{
+.card.card-features{
   /* height:300px; */
   margin:24px;
   width:250px;
