--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,8 @@ body {
   place-items: center; */
   min-width: 320px;
   min-height: 100vh;
+
+  background: #ededed93;
 }
 .navbar-brand{
   margin-left:121px;
